Added swagger documentation for AuthorController@update and fixed some problems in request rules
